v7.3.0 (---):
::internal changes:
- modularize common.sh

::downloader changes:
- changed download links to Mediafire so that they can automatically be
  downloaded using wget, this makes Cliff Super Mario Bros., Ghostly Super
  Mario Boos Wii, MLG Super Mario Bros. Wii, Pokemon Neo X, Pokemon Neo Y
  and Pokemon Red Ruby auto-downloadable
- changed download links to Sendspace so that they can automatically be
  downloaded using wget, this makes Challenging Super Mario Bros. Wii:
  Virtual Special auto-downloadable

::misc. changes:
- update Cliff Super Mario Bros. to version 1.0.5

v7.2.2 (20160823):
::bug fixes
- fix PATCHIMAGE_3DS_DIR setup when no ${HOME}/.patchimage.rc exists
- fix PATCHIMAGE_ROM_DIR setup when no ${HOME}/.patchimage.rc exists
- fixed that the script expected wrong parameter --show-downloadlink
  instead of correct --show-download
- fix error messages or required user-input during batch-build by
  creating a separate build directory, then create the mod and before
  the next build is done that build directory is removed and re-created
  - when ${PWD} is writable that will be ${PWD}/patchimage_build, else
    it will be ${HOME}/patchimage_build

::misc. changes
- use 'read -er' instead of 'read -r' so that during user-input readline
  features like path-completion can be used.
- in game information fix link to Pokemon Star Sapphire Thread
- update Cliff Super Mario Bros. to version 1.0.4

v7.2.1 (20160822):
::bug fixes
- fix ID for Kirby's Adventure Wii and Mario Kart Wii for US versions

v7.2.0 (20160822):
::internal changes
- functions for applying IPS, PPF and BPS patches now check for patch zip files
  in ${PWD} and ${PACHIMAGE_RIIVOLUTION_DIR}, just like all other functions and
  unpack them, if found
- functions for applying IPS, PPF and BPS patches now look in ${PWD} and
  ${PATCHIMAGE_RIIVOLUTION_DIR} for patch files
- functions for applying IPS, PPF and BPS patches thus only fail when they